--- a/block-BHaabs/assets/stylesheet/style.css
+++ b/block-BHaabs/assets/stylesheet/style.css
@@ -59,40 +59,48 @@ body{
     line-height: 1.5;
     background-color: rgba(29, 28, 28, 0.959);
     color: white;
-    font-family: 'Open Sans', sans-serif;
-    /* font-family: 'Roboto', sans-serif; */
+    font-family: 'Roboto', sans-serif;
+}
+h1,h2,h3,h4,h5,h6, time {
+    font-family: 'Source Sans Pro', sans-serif;
 }
 .container{
     max-width: 1200px;
-    padding: 20px 60px;
-    margin: 0 100px;
+    padding: 0 32px;
+    margin: 0 auto;
 }
-.left {
+.flex {
     display: flex;
-    justify-content: right;
-    vertical-align: middle;
+    justify-content: space-between;
+    align-items: center;
 }
+
+/* Article */
+
 h1,
 h2 {
     font-size: 52px;
     letter-spacing: -1px;
     font-weight: 700;
     text-transform: capitalize;
-    text-shadow: 3px 4px 2px rgba(0, 0, 0, 0.6);
+    text-shadow: 3px 4px 5px rgba(0, 0, 0, 0.6);
     padding: 32px 0;
 }
 h3 {
-    font-size: 20px;
-    font-weight: 600;
+    font-size: 24px;
+    font-weight: 700;
     color: crimson;
     text-transform: capitalize;
+    margin-bottom: 32px;
 }
-h4 {
-    font-size: 20px;
-    font-weight: 600;
+time {
+    font-size: 24px;
     text-transform: capitalize;
+    margin-bottom: 32px;
 }
 p {
     font-size: 16px;
-    color: rgb(212, 197, 197);
+    color: #d5d5be;
+    margin-bottom: 16px;
+    line-height: 1.7;
 }
